# AP-Verifier

./: .gitignore  CMakeLists.txt  Log4cxxConfig.conf  ap_node.h  ap_nodeB.cpp  ap_nodeB.h  ap_nodeS.cpp  ap_nodeS.h  ap_nodeV.cpp  ap_nodeV.h  ap_verifier.cpp  ap_verifier.h  ap_verifier_util.cpp  ap_verifier_utils.h  main.cpp  predicate_node.cpp  predicate_node.h  router.cpp  router.h
examples/: README.md
examples/complex/: router1.rules.json  router2.rules.json  router3.rules.json  topology.json
examples/simple_no_loop/: policy.json  router4.rules.json  topology.json
